<resources>
    <string name="app_name">CO-TOON</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="navigation_drawer_open">Open co - toon</string>
    <string name="navigation_drawer_close">Close co - toon</string>
    <string name="line">____________________________________________________</string>
    <string name="slide_1_title">CO-TOON</string>
    <string name="slide_1_desc">Temukan Berbagai Cara Untuk Menghindari Penularan COVID-19 Sekarang</string>
    <string name="slide_2_title">COVID-19</string>
    <string name="slide_2_desc">Mari Kita Pelajari Apa itu COVID-19 Agar Kita Bisa Mengetahui Penyebabnya</string>
    <string name="slide_3_title">Universitas Negeri Malang</string>
    <string name="slide_3_desc">Kami Mahasiswa Universitas Negeri Malang Membuat Aplikasi Ini Agar Bermanfaat Bagi Pembaca</string>
    <string name="slide_4_title">GUIDE</string>
    <string name="slide_4_desc">Cari Guide Untuk Menemani Perjalananmu Agar  semakin asyik </string>
</resources>